--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.12.1",
-    "react-native-safe-area-context": "^4.7.2"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-root-siblings": "^5.0.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
